--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {},
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "parse-readme": "markdown readme.md > index.html"
   },
   "keywords": [
     "ais"
