--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
     "moment": "^2.19.1",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "tor-request": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
