--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "request": "^2.83.0",
     "tor-request": "^2.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.18.9"
+  },
   "scripts": {
+    "dev": "DEBUG=true nodemon --watch ./ index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "parse-readme": "markdown readme.md > index.html"
